--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <style type="text/css">.body { width: auto; }</style>
   </head>
   <body>
-
+    <h1>Titre 1</h1>
+    <h2>Titre 2</h2>
   </body>
 </html>
